# bioopt

./: CHANGELOG.md  README.md  pyproject.toml
bioopt/: __init__.py  base.py  utils.py
bioopt/adapters/: __init__.py  pytorch.py  tensorflow.py
bioopt/swarm/: __init__.py  abc.py  aco.py  fa.py  gwo.py  pso.py  woa.py
tests/: __init__.py  test_all.py
