[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioopt"
version = "0.1.0"
description = "Bio-inspired optimization algorithms for machine learning and scientific computing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rehan Guha", email = "rehanguha29@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "numba>=0.56.0",
    "interspace>=0.1.0",
]

[project.optional-dependencies]
pytorch = ["torch>=1.12.0"]
tensorflow = ["tensorflow>=2.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bioopt"
Documentation = "https://bioopt.readthedocs.io"
Repository = "https://github.com/yourusername/bioopt"
Changelog = "https://github.com/yourusername/bioopt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["bioopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
